--- a/src/OurTime.WebUI/Views/Home/Index.cshtml
+++ b/src/OurTime.WebUI/Views/Home/Index.cshtml
@@ -3,14 +3,21 @@
 }
 
 <header>
+    <div class="logo-container">
+        <img src="/images/logga.png" alt="Logotyp för Ww Watches">
+
+    </div>
+
     <h1>Watch the Watch</h1>
     <p class="slogan">Time You Can Wear</p>
+
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Watches</a></li>
             <li><a href="#">About us</a></li>
             <li><a href="#">Contact</a></li>
+            <li><a href="#">Privacy</a></li>
         </ul>
     </nav>
 </header>
@@ -21,22 +28,30 @@
         <p>Explore our exclusive watches</p>
     </section>
 
-    <section class="products">
-        <article class="product-card">
-            <img src="@Url.Content("~/images/watch1 small.jpg")" alt="Watch 1" />
-            <h3>Rolex</h3>
-            <p>Pris: 49 999 SEK</p>
-            <button>Köp nu</button>
-        </article>
+   <section class="products">
+    <article class="product-card">
+        <img src="@Url.Content("~/images/Trailmaster.jpg")" alt="Watch 1" />
+        <h3>WTW<br>Trailmaster</h3>
+        <p>Pris: 49 999 SEK</p>
+        <button>Buy now</button>
+    </article>
 
-        <article class="product-card">
-            <img src="@Url.Content("~/images/watch2 small.jpg")" alt="Watch 2" />
-            <h3>Hublot</h3>
-            <p>Pris: 89 895 SEK</p>
-            <button>Buy now</button>
-        </article>
-    </section>
+    <article class="product-card">
+        <img src="@Url.Content("~/images/Trek.jpg")" alt="Watch 2" />
+        <h3>WTW<br>Treck</h3>
+        <p>Pris: 89 895 SEK</p>
+        <button>Buy now</button>
+    </article>
+
+    <article class="product-card">
+        <img src="@Url.Content("~/images/Velour.png")" alt="Watch 3" />
+        <h3>WTW<br>Velour</h3>
+        <p>Pris: 29 995 SEK</p>
+        <button>Buy now</button>
+    </article>
+</section>
 </main>
+
 
 <footer>
     <p>&copy; 2025 WatchtheWatch</p>
