--- a/src/OurTime.WebUI/Views/Home/Index.cshtml
+++ b/src/OurTime.WebUI/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
     </article>
 
     <article class="product-card">
-        <img src="@Url.Content("~/images/Trek.jpg")" alt="Watch 2" />
+        <img src="@Url.Content("~/images/Treck.jpg")" alt="Watch 2" />
         <h3>WTW<br>Treck</h3>
         <p>Pris: 89 895 SEK</p>
         <button>Buy now</button>
