SCRUM-14 fixed incorrect changes

--- a/src/OurTime.WebUI/Views/Home/Index.cshtml
+++ b/src/OurTime.WebUI/Views/Home/Index.cshtml
@@ -28,30 +28,29 @@
         <p>Explore our exclusive watches</p>
     </section>
 
-   <section class="products">
-    <article class="product-card">
-        <img src="@Url.Content("~/images/Trailmaster.jpg")" alt="Watch 1" />
-        <h3>WTW<br>Trailmaster</h3>
-        <p>Pris: 49 999 SEK</p>
-        <button>Buy now</button>
-    </article>
+    <section class="products">
+        <article class="product-card">
+            <img src="@Url.Content("~/images/Trailmaster.jpg")" alt="Watch 1" />
+            <h3>WTW Trailmaster</h3>
+            <p>Pris: 49 999 SEK</p>
+            <button>Buy now</button>
+        </article>
 
-    <article class="product-card">
-        <img src="@Url.Content("~/images/Treck.jpg")" alt="Watch 2" />
-        <h3>WTW<br>Treck</h3>
-        <p>Pris: 89 895 SEK</p>
-        <button>Buy now</button>
-    </article>
+        <article class="product-card">
+            <img src="@Url.Content("~/images/Trek.jpg")" alt="Watch 2" />
+            <h3>WTW<br>Treck</h3>
+            <p>Pris: 89 895 SEK</p>
+            <button>Buy now</button>
+        </article>
 
-    <article class="product-card">
-        <img src="@Url.Content("~/images/Velour.png")" alt="Watch 3" />
-        <h3>WTW<br>Velour</h3>
-        <p>Pris: 29 995 SEK</p>
-        <button>Buy now</button>
-    </article>
-</section>
+         <article class="product-card"></article>
+            <img src="@Url.Content("~/images/Velour.png")" alt="Watch 3" />
+            <h3>WTW<br>Velour</h3>
+            <p>Pris: 29 995 SEK</p>
+            <button>Buy now</button>
+        </article>
+    </section>
 </main>
-
 
 <footer>
     <p>&copy; 2025 WatchtheWatch</p>
