SCRUM-14 ändrade logga

--- a/src/OurTime.WebUI/Views/Home/Index.cshtml
+++ b/src/OurTime.WebUI/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <header>
     <div class="logo-container">
-        <img src="/images/logga.png" alt="Logotyp för Ww Watches">
+        <img src="/images/OT.png" alt="Logotyp för OurTime">
 
     </div>
 
@@ -54,5 +54,5 @@
 </main>
 
 <footer>
-    <p>&copy; 2025 WatchtheWatch</p>
+    <p>&copy; 2025 OurTime</p>
 </footer>
