--- a/src/OurTime.WebUI/Views/Home/Index.cshtml
+++ b/src/OurTime.WebUI/Views/Home/Index.cshtml
@@ -31,21 +31,21 @@
     <section class="products">
         <article class="product-card">
             <img src="@Url.Content("~/images/Trailmaster.jpg")" alt="Watch 1" />
-            <h3>WTW Trailmaster</h3>
+            <h3>OT Trailmaster</h3>
             <p>Pris: 49 999 SEK</p>
             <button>Buy now</button>
         </article>
 
         <article class="product-card">
             <img src="@Url.Content("~/images/Treck.jpg")" alt="Watch 2" />
-            <h3>WTW<br>Treck</h3>
+            <h3>OT<br>Treck</h3>
             <p>Pris: 89 895 SEK</p>
             <button>Buy now</button>
         </article>
 
          <article class="product-card">
     <img src="@Url.Content("~/images/Velour.png")" alt="Watch 3" />
-    <h3>WTW<br>Velour</h3>
+    <h3>OT<br>Velour</h3>
     <p>Pris: 29 995 SEK</p>
     <button>Buy now</button>
 </article>
