--- a/src/OurTime.WebUI/Views/Home/Index.cshtml
+++ b/src/OurTime.WebUI/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <header>
     <div class="logo-container">
-        <img src="/images/OT.png" alt="Logotyp för OurTime">
+        <img src="/images/OT.jpg" alt="Logotyp för OurTime">
 
     </div>
 
