--- a/src/OurTime.WebUI/Views/Shared/_Layout.cshtml
+++ b/src/OurTime.WebUI/Views/Shared/_Layout.cshtml
@@ -30,8 +30,10 @@
                 }
                 else
                 {
+                    <li><a asp-controller="Account" asp-action="Register">Registrera</a></li>
                     <li><a asp-controller="Account" asp-action="Login">Logga in</a></li>
                 }
+
             </ul>
         </nav>
 
