--- a/src/OurTime.WebUI/Views/Account/Login.cshtml
+++ b/src/OurTime.WebUI/Views/Account/Login.cshtml
@@ -17,7 +17,8 @@
                     <input type="password" class="form-control" id="floatingPassword" name="password" placeholder="Lösenord">
                     <label for="floatingPassword">Lösenord</label>
                 </div>
-                <button type="submit" class="btn btn-primary w-100">Logga in</button>
+                <button type="submit" class="btn btn-dark text-danger w-100">Logga in</button>
+
             </form>
             @if (!ViewData.ModelState.IsValid)
             {
