--- a/src/OurTime.WebUI/Views/Home/Watches.cshtml
+++ b/src/OurTime.WebUI/Views/Home/Watches.cshtml
@@ -14,38 +14,17 @@
         <!-- Trailmaster-kort -->
         <article class="product-card">
             <!-- Klickbar bild + titel -->
-            <a asp-controller="Home" asp-action="Trailmaster">
-                <img src="@Url.Content("~/images/Trailmaster.jpg")" alt="OT Trailmaster" />
+            <a asp-controller="Home" asp-action="Vector">
+                <img src="@Url.Content("~/images/VectorV1.png")" alt="OT Vector" />
                 <h3>OT Trailmaster</h3>
             </a>
             <p>Pris: 49 999 SEK</p>
             <!-- Klickbar knapp -->
-            <a asp-controller="Home" asp-action="Trailmaster">
-                <button>Buy now</button>
+            <a asp-controller="Home" asp-action="Vector">
+                <button>More information</button>
             </a>
         </article>
 
-        <!-- Treck-kort -->
-        <article class="product-card">
-            <a asp-controller="Home" asp-action="Treck">
-                <img src="@Url.Content("~/images/Treck.jpg")" alt="OT Treck" />
-                <h3>OT Treck</h3>
-            </a>
-            <p>Pris: 89 895 SEK</p>
-            <a asp-controller="Home" asp-action="Treck">
-                <button>Buy now</button>
-            </a>
-        </article>
-
-        <!-- Velour-kort -->
-        <article class="product-card">
-            <a asp-controller="Home" asp-action="Velour">
-                <img src="@Url.Content("~/images/Velour.png")" alt="OT Velour" />
-                <h3>OT Velour</h3>
-            </a>
-            <p>Pris: 29 995 SEK</p>
-            <a asp-controller="Home" asp-action="Velour">
-                <button>Buy now</button>
             </a>
         </article>
     </section>
