SCRUM-54-fixat watches med tre klockor, samt ändrat bildstorlek på klockan i index

--- a/src/OurTime.WebUI/Views/Home/Index.cshtml
+++ b/src/OurTime.WebUI/Views/Home/Index.cshtml
@@ -22,6 +22,7 @@
             <!-- Klickbar knapp -->
             <a asp-controller="Home" asp-action="Vector">
                 <button>More information</button>
+                <button>Buy now</button>
             </a>
         </article>
 
