SCRUM-55 css per vy samt en bas, ny bakgrund på 3 vyer test,m.m

--- a/src/OurTime.WebUI/Views/Home/About.cshtml
+++ b/src/OurTime.WebUI/Views/Home/About.cshtml
@@ -19,11 +19,7 @@
 </section>
 
 
-<!-- Kontaktsektionen -->
-<section>
-    <h2>Kontakt</h2>
-    <p>Har du frågor eller behöver support? Hör av dig på:</p>
-
-    @Html.Partial("_ContactInfo")
-</section>
+@section Styles {
+    <link rel="stylesheet" href="~/css/About.css" />
+}
 
