--- a/src/OurTime.WebUI/Views/Home/Contact.cshtml
+++ b/src/OurTime.WebUI/Views/Home/Contact.cshtml
@@ -5,4 +5,10 @@
 <h1 class="mt-4">Contact</h1>
 <p>Har du frågor eller kommentarer? Kontakta oss gärna på:</p>
 
+
+
 @Html.Partial("_ContactInfo")
+
+@section Styles {
+    <link rel="stylesheet" href="~/css/Contact.css" />
+}
