--- a/src/OurTime.WebUI/Views/Home/Watches.cshtml
+++ b/src/OurTime.WebUI/Views/Home/Watches.cshtml
@@ -53,3 +53,7 @@
 <footer>
     <p>&copy; 2025 OurTime</p>
 </footer>
+
+@section Styles {
+    <link rel="stylesheet" href="~/css/Watches.css" />
+}
