--- a/src/OurTime.WebUI/Views/Shared/_Layout.cshtml
+++ b/src/OurTime.WebUI/Views/Shared/_Layout.cshtml
@@ -4,9 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - OurTime.WebUI</title>
+
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/base.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/OurTime.WebUI.styles.css" asp-append-version="true" />
+
+    @RenderSection("Styles", required: false)
 </head>
 <body>
     <header>
@@ -33,16 +36,19 @@
                     <li><a asp-controller="Account" asp-action="Register">Registrera</a></li>
                     <li><a asp-controller="Account" asp-action="Login">Logga in</a></li>
                 }
-
             </ul>
         </nav>
-
     </header>
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
+
+    <footer>
+        <p>&copy; 2025 OurTime</p>
+    </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
