--- a/src/OurTime.WebUI/Views/Home/Watches.cshtml
+++ b/src/OurTime.WebUI/Views/Home/Watches.cshtml
@@ -1,6 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Watches";
 }
+@section Styles {
+    <link rel="stylesheet" href="~/css/watches.css" asp-append-version="true" />
+}
+
 
 <main>
     <section class="hero">
