--- a/src/OurTime.WebUI/wwwroot/css/site.css
+++ b/src/OurTime.WebUI/wwwroot/css/site.css
@@ -2,12 +2,14 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-image: url('/images/Background.jpg'); /* eller rätt filnamn */
+  background-image: url('/images/Background.jpg');
   background-size: cover;
-  background-position: center;
+  background-position: top right; /* Klockan i hörnet */
   background-repeat: no-repeat;
-  color: #000000;
+  background-attachment: fixed;
+  color: #0f0f0f;
 }
+
 
 
 header {
@@ -37,7 +39,8 @@ nav ul {
   padding: 0;
   display: flex;
   justify-content: center;
-  gap: 1em;
+  gap: 2em;
+  font-size: 20px;
 }
 
 nav a {
@@ -56,27 +59,6 @@ nav a:hover {
 }
 
 
-.products {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 2em;
-  padding: 2em;
-}
-
-.product-card {
-  border: 1px solid #E0E0E0;
-  padding: 1em;
-  text-align: center;
-  width: 400px;
-  background: white;
-}
-
-.product-card img {
-  width: 100%;
-  height: auto;
-}
-
 button {
   background-color: #C62828;
   color: white;
@@ -88,4 +70,34 @@ button {
 button:hover {
   background-color: #A61B1B;
 }
+
+
+/* About Us textcentrering och justering */
+.about-section {
+  text-align: center;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 2em;
+}
+
+.about-section h2 {
+  font-size: 32px;
+  margin-bottom: 1em;
+  color: #111111; /* Vit text för bättre kontrast */
+}
+
+.about-section p {
+  font-size: 22px;
+  line-height: 1.8;
+  color: #111111;
+}
+
+footer {
+  text-align: center;
+  padding: 1em 0; 
+  color: rgb(12, 12, 12);
+  margin-top: 2em;
+  width: 100%;
+}
+
 
