SCRUM-54-justerat vyer, ändrat text, uppdaterat contact etc

--- a/src/OurTime.WebUI/Views/Home/About.cshtml
+++ b/src/OurTime.WebUI/Views/Home/About.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="about-section">
+﻿<div class="section-content">
     <h2>About Us</h2>
     <p>
         We are a close-knit team of experienced watchmakers with a passion for time, precision, and design. 
@@ -13,6 +13,7 @@
         Welcome to our world – where Time is Of The Essence.
     </p>
 </div>
+
 
 
 
