--- a/src/OurTime.WebUI/Views/Home/Index.cshtml
+++ b/src/OurTime.WebUI/Views/Home/Index.cshtml
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="~/css/index.css" asp-append-version="true" />
 }
 
-<main>
-    <section class="hero">
-        <h2>Time is of the Essence – wear it wisely</h2>
-        <p>Explore our exclusive watches</p>
-    </section>
+<div class="section-content">
+    <h2>Time is of the Essence – wear it wisely</h2>
+    <p>Explore our exclusive watches</p>
+</div>
 
+<main>
     <!-- Produkterna -->
-    <section class="products">
+    <section class="products section-content">
         <!-- Trailmaster-kort -->
         <article class="product-card index-product-card">
             <!-- Klickbar bild + titel -->
