--- a/src/OurTime.WebUI/Views/Home/Watches.cshtml
+++ b/src/OurTime.WebUI/Views/Home/Watches.cshtml
@@ -5,13 +5,12 @@
     <link rel="stylesheet" href="~/css/watches.css" asp-append-version="true" />
 }
 
+<div class="section-content">
+    <h2>OT Watches</h2>
+    <p>Explore our exclusive watch models below.</p>
+</div>
 
 <main>
-    <section class="hero">
-        <h2>OT Watches</h2>
-        <p>Utforska våra exklusiva klockmodeller nedan.</p>
-    </section>
-
     <section class="products">
         <!-- Trailmaster -->
         <article class="product-card">
@@ -19,7 +18,7 @@
                 <img src="@Url.Content("~/images/Trailmaster A1.png")" alt="OT Trailmaster" />
                 <h3>OT Trailmaster</h3>
             </a>
-            <p>Pris: 49 999 SEK</p>
+            <p>Price: 49,999 SEK</p>
             <a asp-controller="Home" asp-action="Trailmaster">
                 <button>More information</button>
                 <button>Buy now</button>
@@ -32,7 +31,7 @@
                 <img src="@Url.Content("~/images/Velour.png")" alt="OT Velour" />
                 <h3>OT Velour</h3>
             </a>
-            <p>Pris: 19 999 SEK</p>
+            <p>Price: 19,999 SEK</p>
             <a asp-controller="Home" asp-action="Velour">
                 <button>More information</button>
                 <button>Buy now</button>
@@ -45,7 +44,7 @@
                 <img src="@Url.Content("~/images/Trek A1.png")" alt="OT Trek" />
                 <h3>OT Trek</h3>
             </a>
-            <p>Pris: 39 999 SEK</p>
+            <p>Price: 39,999 SEK</p>
             <a asp-controller="Home" asp-action="Trek">
                 <button>More information</button>
                 <button>Buy now</button>
