--- a/src/OurTime.WebUI/Views/Shared/_ContactInfo.cshtml
+++ b/src/OurTime.WebUI/Views/Shared/_ContactInfo.cshtml
@@ -1,4 +1,4 @@
-﻿<ul>
+﻿<ul class="contact-info">
     <li>Email: <a href="mailto:info@ourtime.com">info@ourtime.com</a></li>
-    <li>Telefon: +46 70 123 45 67</li>
+    <li>Phone: <a href="tel:+46701234567">+46 70 123 45 67</a></li>
 </ul>
