SCRUM-54-Ändrat registera och logga in i menyn till engelska

--- a/src/OurTime.WebUI/Views/Shared/_Layout.cshtml
+++ b/src/OurTime.WebUI/Views/Shared/_Layout.cshtml
@@ -32,8 +32,8 @@
                 }
                 else
                 {
-                    <li><a asp-controller="Account" asp-action="Register">Registrera</a></li>
-                    <li><a asp-controller="Account" asp-action="Login">Logga in</a></li>
+                    <li><a asp-controller="Account" asp-action="Register">Registrer</a></li>
+                    <li><a asp-controller="Account" asp-action="Login">Log in</a></li>
                 }
             </ul>
         </nav>
